@@ -1,3 +1,9 @@
+2012-02-28  Jeff Johnston  <jjohnstn@redhat.com>
+
+	Bug #371277
+	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/actions/InvokeAction.java (..run): Use sh -c to execute
+	the autotool scripts.
+
 2011-12-16  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/preferences/AutoconfEditorPreferencePage.java (fACVersions): Add
